[package]
name = "eip_1024"
version = "0.1.0"
description = "EIP-1024 Rust implementation"
license-file = "LICENSE"
readme = "README.md"
authors = ["hskang9 <hskang9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
saltbabe = "0.1.0"
arrayref = "0.3.5"
hex = "0.4.0"
